@@ -4,6 +4,11 @@
 	* breakpoint.c (validate_commands_for_breakpoint): If validating a
 	tracepoint, reset its STEP_COUNT and call validate_actionline.
 
+2013-04-03  Doug Evans  <dje@google.com>
+
+	* psymtab.c (read_psymtabs_with_fullname): Don't call
+	psymtab_to_fullname if the basenames are different.
+
 2013-04-03  Jan Kratochvil  <jan.kratochvil@redhat.com>
 
 	* NEWS (Changes in GDB 7.6): Update the data-disassemble for "fullname".
